--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+    google()
 }
 
 ext {
@@ -15,25 +16,22 @@ ext {
     junitVersion = '5.9.3'
 }
 
-sourceCompatibility = '17'
-targetCompatibility = '17'
-
-tasks.withType(JavaCompile) {
+tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
 }
 
 dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.0.1'
     implementation 'org.aeonbits.owner:owner:1.0.12'
+
     testImplementation('org.seleniumhq.selenium:selenium-java:4.9.0')
     testImplementation('io.github.bonigarcia:webdrivermanager:5.7.0')
     testImplementation('org.slf4j:slf4j-simple:2.0.7')
 
-    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
+    testImplementation("org.junit.jupiter:junit-jupiter-api:5.9.3")
+    testImplementation("org.junit.jupiter:junit-jupiter-params:5.9.3")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.9.3")
 
-    compileOnly 'org.projectlombok:lombok:1.18.30'
-    annotationProcessor 'org.projectlombok:lombok:1.18.30'
     testCompileOnly 'org.projectlombok:lombok:1.18.30'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
 }
